package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

filegroup(
    name = "static",
    srcs = glob(
        include = [
            "static/**/*",
            "static/ethereum-cryptography/*",
        ],
    ),
)

load("@npm_bazel_typescript//:index.bzl", "ts_devserver")

ts_devserver(
    name = "devserver",
    additional_root_paths = [":static"],
    entry_module = "dcl/manadata/frontend/entrypoint",
    port = 3000,
    serving_path = "/bundle.js",
    static_files = [
        "index.html",
        "static/index.css",
        ":static",
        "@npm//@babel/runtime",
        "@npm//babel-runtime",
        "@npm//decentraland-ui",
        "@npm//react",
        "@npm//react-dom",
        "@npm//react-redux",
        "@npm//react-router",
        "@npm//react-router-dom",
        "@npm//redux",
        "@npm//redux-saga",
        "@npm//typesafe-actions",
    ],
    deps = [
        "static/config.js",
        "//manadata/frontend",
        ":static/jsonwebtoken.js",
    ],
)
