package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")

ts_library(
    name = "devtool",
    srcs = glob(
        include = [
            "page.tsx",
        ],
    ),
    module_name = "@dcl/debugger/devtool",
    deps = [
        "//debugger/devtool/comms",
        "//debugger/devtool/jslibs",
        "//debugger/devtool/scenes",
        "//debugger/types",
        "//jslibs/hooks",
        "@npm//@types/react",
        "@npm//@types/react-dom",
        "@npm//@types/redux",
        "@npm//react",
        "@npm//react-dom",
        "@npm//redux",
    ],
)

ts_library(
    name = "bundled_devtool",
    srcs = glob(
        include = [
            "**/*.ts",
            "**/*.tsx",
            "page.tsx",
        ],
    ),
    module_name = "@dcl/debugger/bundled_devtool",
    deps = [
        "//debugger/devtool/comms",
        "//debugger/devtool/jslibs",
        "//debugger/devtool/scenes",
        "//debugger/types",
        "//jslibs/hooks",
        "@npm//@types/react",
        "@npm//@types/react-dom",
        "@npm//@types/redux",
        "@npm//react",
        "@npm//chart.js",
        "@npm//react-dom",
        "@npm//redux",
    ],
)

rollup_bundle(
    name = "bundle",
    config_file = ":rollup.config.js",
    entry_point = "page.tsx",
    format = "umd",
    deps = [
        ":bundled_devtool",
        "//debugger/devtool/comms",
        "//debugger/devtool/jslibs",
        "//debugger/devtool/scenes",
        "//debugger/devtool/static",
        "//debugger/types",
        "//jslibs/hooks",
        "@npm//chart.js",
        "@npm//react",
        "@npm//react-dom",
    ],
)
