package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "types",
    srcs = glob(
        include = [
            "*.ts",
        ],
    ),
    module_name = "@dcl/debugger/types",
    deps = [
        "@npm//redux"
    ],
)
