package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "deepEqual",
    srcs = glob(
        include = [
            "index.ts",
        ],
    ),
    module_name = "dcl/jslibs/deepEqual",
    deps = [
        "@npm//@types",
    ],
)
