package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

filegroup(
    name = "sources",
    srcs = glob(
        include = [
            "*.ts",
            "*.tsx",
        ],
    ),
)

ts_library(
    name = "frontend",
    srcs = glob(
        include = [
            "*.ts",
            "*.tsx",
            "**/*.ts",
            "**/*.tsx"
        ],
    ),
    deps = [
        "@npm//@types/react",
        "@npm//@types/react-dom",
        "@npm//@types/react-router",
        "@npm//@types/history",
        "@npm//react",
        "@npm//ethereum-cryptography",
        "@npm//react-router",
        "@npm//react-dom",
        "@npm//redbox-react",
        "@npm//history",
        "@npm//redux",
        "@npm//decentraland-ui",
    ],
)