package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "comms",
    srcs = glob(
        include = [
            "*.ts",
            "*.tsx",
        ],
    ),
    module_name = "@dcl/debugger/devtool/comms",
    deps = [
        "//debugger/devtool/jslibs",
        "//debugger/types",
        "//jslibs/hooks",
        "@npm//redux",
        "@npm//react",
        "@npm//@types/react",
        "@npm//chart.js",
        "@npm//@types/chart.js",
    ],
)
