package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "comms",
    srcs = glob(
        include = [
            "*.ts",
            "*.tsx",
        ],
    ),
    module_name = "@dcl/debugger/devtool/comms",
    deps = [
        "//debugger/devtool/jslibs",
        "//debugger/types",
        "//jslibs/deepEqual",
        "//jslibs/hooks",
        "@npm//@types/chart.js",
        "@npm//@types/react",
        "@npm//chart.js",
        "@npm//react",
        "@npm//redux",
    ],
)
