package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "explorer",
    srcs = glob(
        include = [
            "*.ts",
            "*.tsx",
            "**/*.ts",
            "**/*.tsx",
        ],
    ),
    module_name = "@dcl/debugger/devtool/explorer",
    deps = [
        "//debugger/devtool/jslibs",
        "//debugger/types",
        "//jslibs/hooks",
        "@npm//@types/react",
        "@npm//react",
        "@npm//redux",
    ],
)
