package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "navigation",
    srcs = glob(
        include = [
            "*.ts",
            "*.tsx",
        ],
    ),
    module_name = "@dcl/debugger/devtool/layout/navigation",
    deps = [
        "//debugger/types",
        "//jslibs/hooks",
        "@npm//@types/react",
        "@npm//react",
        "@npm//redux",
    ],
)
