package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "renderer",
    srcs = glob(
        include = [
            "*.ts",
            "*.tsx",
        ],
    ),
    module_name = "@dcl/debugger/devtool/renderer",
    deps = [
        "//debugger/types",
        "//jslibs/hooks",
        "@npm//react",
    ],
)
