package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "scenes",
    srcs = glob(
        include = [
            "*.ts",
        ],
    ),
    module_name = "@dcl/debugger/devtool/scenes",
    deps = [
        "//debugger/types",
        "//jslibs/hooks",
        "@npm//redux",
    ],
)
