package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "explorer",
    srcs = glob(
        include = [
            "*.ts",
            "*.tsx",
        ],
    ),
    module_name = "@dcl/debugger/devtool/layout/explorer",
    deps = [
        "//debugger/types",
        "//jslibs/hooks",
        "@npm//react",
        "@npm//@types/react",
        "@npm//redux",
    ],
)
