package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "browser",
    srcs = glob(
        include = [
            "*.ts",
        ],
        exclude = [
            "*.spec.ts",
        ],
    ),
    module_name = "decentraland/c2-data/web3/browser",
    deps = [
        "//decentraland/c1-basics",
        "@npm//@types",
        "@npm//web3x",
    ],
)