package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "networking",
    srcs = glob(
        include = [
            "*.ts",
            "*.tsx",
        ],
    ),
    module_name = "@dcl/debugger/devtool/layout/explorer/networking",
    deps = [
        "//debugger/types",
        "//jslibs/hooks",
        "@npm//@types/react",
        "@npm//@types/chart.js",
        "@npm//chart.js",
        "@npm//react",
        "@npm//redux",
    ],
)
